--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: var(--color-navy);
+    --background: var(--color-dark-navy);
   }
 }
 
