--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 @plugin "daisyui" {
   exclude: scrollbar, rootcolor;
-  themes: light --default, dark --prefersdark;
+  themes: dark --default, dark --prefersdark;
 }
 
 :root {
